[package]
name = "base_names"
version = "0.1.4"
description = "Base Name Service Substreams package"
edition = "2021"
repository = "https://github.com/PaulieB14/BaseNames-Substreams"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
hex = "0.4"
prost = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
anyhow = "1"

# Required so ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.8"
tonic-build = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
